--- a/pages/Style/aluno.css
+++ b/pages/Style/aluno.css
@@ -22,6 +22,25 @@ header{
     max-height: 280px;
 }
 
+::-webkit-scrollbar{
+    width: 15px;
+        
+}
+
+::-webkit-scrollbar-track {
+    background-color: #ffffff;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #F5F4F9;
+    border-radius: 100%;
+    border: 2px solid #e9e9e9;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(186, 189, 186);
+}
+
 .emociona{
     padding: 20px;
 }
