--- a/pages/Style/professor.css
+++ b/pages/Style/professor.css
@@ -19,11 +19,11 @@ header{
 
 .rolagem{
     overflow-y: auto;
-    max-height: 280px;       
+    max-height: 320px;
 }
 
 ::-webkit-scrollbar{
-    width: 20px;
+    width: 15px;
         
 }
 
@@ -33,12 +33,13 @@ header{
 
 ::-webkit-scrollbar-thumb {
     background: #F5F4F9;
-    border-radius: 20%;
-
+    border-radius: 100%;
+    border: 2px solid #e9e9e9;
 }
-/* ::-webkit-scrollbar-button{
 
-} */
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(186, 189, 186);
+}
 
 .emociona{
     padding: 20px;
